@@ -4,10 +4,10 @@
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
  *          http://license.coscl.org.cn/MulanPSL2
- * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
+ * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  * See the Mulan PSL v2 for more details.
  */
-
 package com.tny.game.common.reflect.aop;
 
 import com.tny.game.common.context.*;
@@ -85,14 +85,14 @@ public class AoperBuilder<T> {
     }
 
     public T build() {
-        Class<Aoper<T>> aoperClass = getAOPerClass(this.clazz, this.aopAnnotationSet);
+        Class<Aoper<T>> aopClass = getAOPerClass(this.clazz, this.aopAnnotationSet);
         try {
-            Aoper<T> aoper = aoperClass.newInstance();
-            aoper.set$Avice(this.afterReturningAdvice);
-            aoper.set$Avice(this.beforeAdvice);
-            aoper.set$Avice(this.throwsAdvice);
+            Aoper<T> aop = Objects.requireNonNull(aopClass).getDeclaredConstructor().newInstance();
+            aop.set$Avice(this.afterReturningAdvice);
+            aop.set$Avice(this.beforeAdvice);
+            aop.set$Avice(this.throwsAdvice);
             //			aoper.set$Proxyed(target);
-            return aoper.get$Wraper();
+            return aop.get$Wraper();
         } catch (Exception e) {
             LOGGER.error("", e);
         }
